Refresh project readme